feat(completions): update git

--- a/completions/git/language/en-US.json
+++ b/completions/git/language/en-US.json
@@ -771,154 +771,206 @@
     },
     {
       "name": "config",
-      "tip": "Retrieve and configure repository or global options.",
+      "tip": [
+        "Retrieve and configure repository or global options."
+      ],
       "next": [
         {
           "name": "user.name",
           "tip": [
-            "Configure the username\n",
+            "Configure the username.\n",
             "E: [--global] user.name xxx"
           ]
         },
         {
           "name": "user.email",
           "tip": [
-            "Configure the email\n",
+            "Configure the email.\n",
             "E: [--global] user.email xxx@outlook.com"
           ]
         },
         {
           "name": "core.editor",
           "tip": [
-            "Configure the default editor"
+            "Configure the default editor."
           ],
           "next": [
             {
               "name": "\"code --wait\"",
               "tip": [
-                "Configure the default editor as vscode"
+                "Configure the default editor as vscode."
               ]
             },
             {
               "name": "vim",
-              "tip": "Configure the default editor as vim"
+              "tip": [
+                "Configure the default editor as vim."
+              ]
             },
             {
               "name": "nvim",
-              "tip": "Configure the default editor as nvim"
+              "tip": [
+                "Configure the default editor as nvim."
+              ]
             },
             {
               "name": "notepad",
-              "tip": "Configure the default editor as Notepad (Microsoft Notepad)"
-            }
-          ]
-        },
-        {
-          "name": "commit.template",
-          "tip": [
-            "Configure the default commit template\n",
-            "E: [--global] commit.template ~/.gitmessage"
-          ]
-        },
-        {
-          "name": "color.ui",
-          "tip": "Configure command auto-coloring.",
-          "next": [
-            {
-              "name": "true",
-              "tip": "Enable command auto-coloring configuration."
-            },
-            {
-              "name": "false",
-              "tip": "Disable command auto-coloring configuration."
-            }
-          ]
-        },
-        {
-          "name": "color.status",
-          "tip": "Configure auto-coloring for the status command.",
-          "next": [
-            {
-              "name": "auto",
-              "tip": "Default value. Automatically determine whether to enable color display based on terminal support."
-            },
-            {
-              "name": "always",
-              "tip": "Always enable color display, regardless of terminal support."
-            },
-            {
-              "name": "never",
-              "tip": "Never enable color display, even if the terminal supports it."
-            }
-          ]
-        },
-        {
-          "name": "color.diff",
-          "tip": "Configure auto-coloring for the diff command.",
-          "next": [
-            {
-              "name": "auto",
-              "tip": "Default value. Automatically determine whether to enable color display based on terminal support."
-            },
-            {
-              "name": "always",
-              "tip": "Always enable color display, regardless of terminal support."
-            },
-            {
-              "name": "never",
-              "tip": "Never enable color display, even if the terminal supports it."
-            }
-          ]
-        },
-        {
-          "name": "color.branch",
-          "tip": "Configure auto-coloring for the branch command.",
-          "next": [
-            {
-              "name": "auto",
-              "tip": "Default value. Automatically determine whether to enable color display based on terminal support."
-            },
-            {
-              "name": "always",
-              "tip": "Always enable color display, regardless of terminal support."
-            },
-            {
-              "name": "never",
-              "tip": "Never enable color display, even if the terminal supports it."
-            }
-          ]
-        },
-        {
-          "name": "color.interactive",
-          "tip": "Configure auto-coloring for the -i (interactive) command.",
-          "next": [
-            {
-              "name": "auto",
-              "tip": "Default value. Automatically determine whether to enable color display based on terminal support."
-            },
-            {
-              "name": "always",
-              "tip": "Always enable color display, regardless of terminal support."
-            },
-            {
-              "name": "never",
-              "tip": "Never enable color display, even if the terminal supports it."
+              "tip": [
+                "Configure the default editor as Notepad (Microsoft Notepad)."
+              ]
             }
           ]
         },
         {
           "name": "https.proxy",
           "tip": [
-            "Set the Git https proxy\n",
+            "Configure the Git https proxy.\n",
             "E: [--global] https.proxy 127.0.0.1:10810   --- Set proxy\n",
             "   [--global] --unset https.proxy           --- Unset proxy"
+          ]
+        },
+        {
+          "name": "commit.template",
+          "tip": [
+            "Configure the default commit template.\n",
+            "E: [--global] commit.template ~/.gitmessage"
+          ]
+        },
+        {
+          "name": "color.ui",
+          "tip": [
+            "Configure the command auto-coloring."
+          ],
+          "next": [
+            {
+              "name": "true",
+              "tip": [
+                "Enable command auto-coloring configuration."
+              ]
+            },
+            {
+              "name": "false",
+              "tip": [
+                "Disable command auto-coloring configuration."
+              ]
+            }
+          ]
+        },
+        {
+          "name": "color.status",
+          "tip": [
+            "Configure the auto-coloring for the status command."
+          ],
+          "next": [
+            {
+              "name": "auto",
+              "tip": [
+                "Default value.\n",
+                "Automatically determine whether to enable color display based on terminal support."
+              ]
+            },
+            {
+              "name": "always",
+              "tip": [
+                "Always enable color display, regardless of terminal support."
+              ]
+            },
+            {
+              "name": "never",
+              "tip": [
+                "Never enable color display, even if the terminal supports it."
+              ]
+            }
+          ]
+        },
+        {
+          "name": "color.diff",
+          "tip": [
+            "Configure the auto-coloring for the diff command."
+          ],
+          "next": [
+            {
+              "name": "auto",
+              "tip": [
+                "Default value.\n",
+                "Automatically determine whether to enable color display based on terminal support."
+              ]
+            },
+            {
+              "name": "always",
+              "tip": [
+                "Always enable color display, regardless of terminal support."
+              ]
+            },
+            {
+              "name": "never",
+              "tip": [
+                "Never enable color display, even if the terminal supports it."
+              ]
+            }
+          ]
+        },
+        {
+          "name": "color.branch",
+          "tip": [
+            "Configure the auto-coloring for the branch command."
+          ],
+          "next": [
+            {
+              "name": "auto",
+              "tip": [
+                "Default value.\n",
+                "Automatically determine whether to enable color display based on terminal support."
+              ]
+            },
+            {
+              "name": "always",
+              "tip": [
+                "Always enable color display, regardless of terminal support."
+              ]
+            },
+            {
+              "name": "never",
+              "tip": [
+                "Never enable color display, even if the terminal supports it."
+              ]
+            }
+          ]
+        },
+        {
+          "name": "color.interactive",
+          "tip": [
+            "Configure the auto-coloring for the -i (interactive) command."
+          ],
+          "next": [
+            {
+              "name": "auto",
+              "tip": [
+                "Default value.\n",
+                "Automatically determine whether to enable color display based on terminal support."
+              ]
+            },
+            {
+              "name": "always",
+              "tip": [
+                "Always enable color display, regardless of terminal support."
+              ]
+            },
+            {
+              "name": "never",
+              "tip": [
+                "Never enable color display, even if the terminal supports it."
+              ]
+            }
           ]
         }
       ],
       "options": [
         {
           "name": "--global",
-          "tip": "Perform global settings."
+          "tip": [
+            "Perform global settings."
+          ]
         },
         {
           "name": "-e",
@@ -932,15 +984,75 @@
         },
         {
           "name": "--unset",
-          "symbol": "WriteSpaceTab",
           "tip": [
-            "Remove config\n",
+            "Remove config.\n",
             "E: [--global] --unset user.name"
+          ],
+          "next": [
+            {
+              "name": "user.name",
+              "tip": [
+                "Remove config --- the username."
+              ]
+            },
+            {
+              "name": "user.email",
+              "tip": [
+                "Remove config --- the email."
+              ]
+            },
+            {
+              "name": "core.editor",
+              "tip": [
+                "Remove config --- the default editor."
+              ]
+            },
+            {
+              "name": "https.proxy",
+              "tip": [
+                "Remove config --- the Git https proxy."
+              ]
+            },
+            {
+              "name": "commit.template",
+              "tip": [
+                "Remove config --- the default commit template."
+              ]
+            },
+            {
+              "name": "color.ui",
+              "tip": [
+                "Remove config --- the command auto-coloring."
+              ]
+            },
+            {
+              "name": "color.status",
+              "tip": [
+                "Remove config --- the auto-coloring for the status command."
+              ]
+            },
+            {
+              "name": "color.diff",
+              "tip": [
+                "Remove config --- the auto-coloring for the diff command."
+              ]
+            },
+            {
+              "name": "color.branch",
+              "tip": [
+                "Remove config --- the auto-coloring for the branch command."
+              ]
+            },
+            {
+              "name": "color.interactive",
+              "tip": [
+                "Remove config --- the auto-coloring for the -i (interactive) command."
+              ]
+            }
           ]
         },
         {
           "name": "--get",
-          "symbol": "WriteSpaceTab",
           "tip": [
             "Get config value (Usually can be omitted)\n",
             "E: [--global] [--get] user.name"
