feat(completions): update git

--- a/completions/git/language/en-US.json
+++ b/completions/git/language/en-US.json
@@ -830,6 +830,38 @@
           ]
         },
         {
+          "name": "user.signingkey",
+          "tip": [
+            "Configure the GPG signing key."
+          ]
+        },
+        {
+          "name": "gpg.program",
+          "tip": [
+            "Configure the GPG program path."
+          ]
+        },
+        {
+          "name": "commit.gpgsign",
+          "tip": [
+            "Configure whether to sign commits with GPG."
+          ],
+          "next": [
+            {
+              "name": "true",
+              "tip": [
+                "Sign commits with GPG."
+              ]
+            },
+            {
+              "name": "false",
+              "tip": [
+                "Don't sign commits with GPG."
+              ]
+            }
+          ]
+        },
+        {
           "name": "commit.template",
           "tip": [
             "Configure the default commit template.\n",
@@ -1011,6 +1043,24 @@
               "name": "https.proxy",
               "tip": [
                 "Remove config --- the Git https proxy."
+              ]
+            },
+            {
+              "name": "user.signingkey",
+              "tip": [
+                "Remove config --- the GPG signing key."
+              ]
+            },
+            {
+              "name": "gpg.program",
+              "tip": [
+                "Remove config --- the GPG program path."
+              ]
+            },
+            {
+              "name": "commit.gpgsign",
+              "tip": [
+                "Remove config --- whether to sign commits with GPG."
               ]
             },
             {
