fix(module): update version to 5.2.2
- 优化菜单的显示，让菜单项和命令帮助的显示更合理
- 优化内置命令的帮助提示显示效果
- 对于补全的编写，简化 hooks，现在只需要在 config.json 中写入 hooks 属性并创建 hooks.ps1 即可
- 修改 schema，添加 tip 属性的注意事项
- 修复模块更新后可能导致所有配置项被重置的问题
- 其他修复与优化

--- a/completions/git/language/en-US.json
+++ b/completions/git/language/en-US.json
@@ -2862,18 +2862,6 @@
   },
   "config": [
     {
-      "name": "enable_hooks",
-      "value": 1,
-      "values": [
-        1,
-        0
-      ],
-      "tip": [
-        "{{ $PSCompletions.info.completion.enable_hooks.tip }}\n",
-        "If you disable it, the <@Magenta>max_commit<@Blue> configuration will also be invalid."
-      ]
-    },
-    {
       "name": "max_commit",
       "value": 20,
       "values": [
@@ -2885,7 +2873,7 @@
         "$_value = $PSCompletions.config.comp_config.git.max_commit;",
         "if($_value -ne $null){ \"Current Value: <@Magenta>$_value<@Blue>`n\" }",
         "}}",
-        "The maximum number that can be parsed for a project commit. Default to <@Magenta>20<@Blue>.\n",
+        "The maximum number that can be parsed for a project commit by the hooks. Default to <@Magenta>20<@Blue>.\n",
         "If it is <@Magenta>-1<@Blue>, all commits will be parsed, which may affect the loading speed."
       ]
     }
