--- a/completions/git/language/zh-CN.json
+++ b/completions/git/language/zh-CN.json
@@ -2861,18 +2861,6 @@
   },
   "config": [
     {
-      "name": "enable_hooks",
-      "value": 1,
-      "values": [
-        1,
-        0
-      ],
-      "tip": [
-        "{{ $PSCompletions.info.completion.enable_hooks.tip }}\n",
-        "如果禁用它，那么 <@Magenta>max_commit<@Blue> 配置也将无效。"
-      ]
-    },
-    {
       "name": "max_commit",
       "value": 20,
       "values": [
@@ -2884,7 +2872,7 @@
         "$_value = $PSCompletions.config.comp_config.git.max_commit;",
         "if($_value -ne $null){ \"当前值: <@Magenta>$_value<@Blue>`n\" }",
         "}}",
-        "可以为当前项目解析的 commit 的最大数量，默认为 <@Magenta>20<@Blue>。\n",
+        "通过 hooks 可以为当前项目解析的 commit 的最大数量，默认为 <@Magenta>20<@Blue>。\n",
         "如果设置为 <@Magenta>-1<@Blue>, 会解析所有 commit，这对补全加载速度有影响。"
       ]
     }
