feat(completions): update psc

--- a/completions/psc/language/en-US.json
+++ b/completions/psc/language/en-US.json
@@ -1797,7 +1797,7 @@
           "}}",
           "Set whether to enable hooks. Default to <@Magenta>1<@Blue>.\n",
           "The hooks will parse or generate some completion data and add them dynamically.\n",
-          "You can disable it by running <@Magenta>psc completion {{ $completion }} enable_hooks 0<@Blue>."
+          "You can disable it by running the command (<@Magenta>psc completion {{ $completion }} enable_hooks 0<@Blue>)."
         ]
       }
     },
