feat(scripts): update

--- a/scripts/template/language/zh-CN.json
+++ b/scripts/template/language/zh-CN.json
@@ -7,7 +7,7 @@
         "-V"
       ],
       "tip": [
-        "显示版本信息"
+        "显示版本信息。"
       ]
     }
   ],
@@ -18,7 +18,7 @@
         "-h"
       ],
       "tip": [
-        "显示帮助信息"
+        "显示帮助信息。"
       ]
     }
   ],
