fix(completions): update psc

--- a/completions/psc/language/en-US.json
+++ b/completions/psc/language/en-US.json
@@ -266,7 +266,7 @@
               ]
             },
             {
-              "name": "\"https://raw.githubusercontent.com/abgox/PSCompletions/main\"",
+              "name": "\"https://github.com/abgox/PSCompletions/raw/main\"",
               "tip": [
                 "Use Github repo"
               ]
