--- a/completions/psc/language/zh-CN.json
+++ b/completions/psc/language/zh-CN.json
@@ -264,7 +264,7 @@
               ]
             },
             {
-              "name": "\"https://raw.githubusercontent.com/abgox/PSCompletions/main\"",
+              "name": "\"https://github.com/abgox/PSCompletions/raw/main\"",
               "tip": [
                 "使用 Github 地址。"
               ]
