feat(completions): update git

--- a/completions/git/language/zh-CN.json
+++ b/completions/git/language/zh-CN.json
@@ -213,6 +213,28 @@
           ]
         },
         {
+          "name": "—allow-empty",
+          "tip": [
+            "用于没有提交信息的 commit"
+          ]
+        },
+        {
+          "name": "--fixup",
+          "tip": [
+            "当前添加的 commit 是以前某一个 commit 的修正。\n",
+            "以后执行互动式的git rebase的时候，这两个 commit 将会合并成一个。"
+          ],
+          "next": []
+        },
+        {
+          "name": "--squash",
+          "tip": [
+            "当前添加的 commit 应该与以前某一个 commit 合并成一个。\n",
+            "以后执行互动式的git rebase的时候，这两个 commit 将会合并成一个。"
+          ],
+          "next": []
+        },
+        {
           "name": "-p",
           "alias": [
             "--patch"
@@ -252,6 +274,51 @@
             "U: -C <commit>\n",
             "获取一个已存在的提交对象, 并在创建提交时重用日志信息和作者信息(包括时间戳)"
           ]
+        },
+        {
+          "name": "--reset-author",
+          "tip": [
+            "When used with -C/-c/--amend options, or when committing after a conflicting cherry-pick, declare that the authorship of the resulting commit now belongs to the committer.\n",
+            "This also renews the author timestamp."
+          ]
+        },
+        {
+          "name": "--short",
+          "tip": [
+            "When doing a dry-run, give the output in the short-format.\n",
+            "See https://git-scm.com/docs/git-status for details.\n",
+            "Implies `--dry-run`."
+          ]
+        },
+        {
+          "name": "--branch",
+          "tip": [
+            "Show the branch and tracking info even in short-format."
+          ]
+        },
+        {
+          "name": "--porcelain",
+          "tip": [
+            "When doing a dry-run, give the output in a porcelain-ready format.\n",
+            "See https://git-scm.com/docs/git-status for details.\n",
+            "Implies `--dry-run`."
+          ]
+        },
+        {
+          "name": "--long",
+          "tip": [
+            "When doing a dry-run, give the output in the long-format.\n",
+            "Implies `--dry-run`."
+          ]
+        },
+        {
+          "name": "-s",
+          "alias": [
+            "--signoff"
+          ]
+        },
+        {
+          "name": "--no-signoff"
         }
       ]
     },
