--- a/completions/git/language/en-US.json
+++ b/completions/git/language/en-US.json
@@ -213,6 +213,27 @@
           ]
         },
         {
+          "name": "—allow-empty",
+          "tip": [
+            "Usually recording a commit that has the exact same tree as its sole parent commit is a mistake, and the command prevents you from making such a commit.\n",
+            "This option bypasses the safety, and is primarily for use by foreign SCM interface scripts."
+          ]
+        },
+        {
+          "name": "--fixup",
+          "tip": [
+            "Create a new commit which \"fixes up\" <commit> when applied with `git rebase --autosquash.`"
+          ],
+          "next": []
+        },
+        {
+          "name": "--squash",
+          "tip": [
+            "Construct a commit message for use with `rebase --autosquash`."
+          ],
+          "next": []
+        },
+        {
           "name": "-p",
           "alias": [
             "--patch"
@@ -252,6 +273,51 @@
             "U: -C <commit>\n",
             "Take an existing commit object and reuse the log message and author information when creating a commit (including timestamps)"
           ]
+        },
+        {
+          "name": "--reset-author",
+          "tip": [
+            "When used with -C/-c/--amend options, or when committing after a conflicting cherry-pick, declare that the authorship of the resulting commit now belongs to the committer.\n",
+            "This also renews the author timestamp."
+          ]
+        },
+        {
+          "name": "--short",
+          "tip": [
+            "When doing a dry-run, give the output in the short-format.\n",
+            "See https://git-scm.com/docs/git-status for details.\n",
+            "Implies `--dry-run`."
+          ]
+        },
+        {
+          "name": "--branch",
+          "tip": [
+            "Show the branch and tracking info even in short-format."
+          ]
+        },
+        {
+          "name": "--porcelain",
+          "tip": [
+            "When doing a dry-run, give the output in a porcelain-ready format.\n",
+            "See https://git-scm.com/docs/git-status for details.\n",
+            "Implies `--dry-run`."
+          ]
+        },
+        {
+          "name": "--long",
+          "tip": [
+            "When doing a dry-run, give the output in the long-format.\n",
+            "Implies `--dry-run`."
+          ]
+        },
+        {
+          "name": "-s",
+          "alias": [
+            "--signoff"
+          ]
+        },
+        {
+          "name": "--no-signoff"
         }
       ]
     },
