--- a/completions/psc/language/zh-CN.json
+++ b/completions/psc/language/zh-CN.json
@@ -1431,11 +1431,9 @@
         "{{ ",
         "$version_list=$PSCompletions.get_raw_content(\"$($PSCompletions.path.temp)\\CHANGELOG.json\") | ConvertFrom-Json;",
         "$lang = if($PSCompletions.language -eq 'zh-CN'){ 'zh-CN' }else{ 'en-US' };",
-        "$num=1;",
         "foreach($_ in $version_list) {",
         "   if($_.version -eq $PSCompletions.version){ break }",
-        "   if($num){ \"<@Blue>$($_.version) : $($_.info.$($lang))\";$num = 0 }",
-        "   else{ \"`n $($_.version) : $($_.info.$($lang))\" }",
+        "   \"`n<@Blue>$($_.version) : $($_.info.$($lang))\"",
         "}",
         "}}\n",
         "<@Cyan>按下 <@Magenta>Enter(回车键)<@Cyan> 进行更新，<@Magenta>其他任意键(不包含 Ctrl 键)<@Cyan> 取消更新!"
