feat(completions): update scoop

--- a/completions/scoop/language/zh-CN.json
+++ b/completions/scoop/language/zh-CN.json
@@ -440,6 +440,9 @@
         },
         {
           "name": "rm",
+          "symbol": [
+            "SpaceTab"
+          ],
           "tip": [
             "U: rm <alias>\n",
             "移除命令别名\n",
