--- a/completions/scoop/language/en-US.json
+++ b/completions/scoop/language/en-US.json
@@ -442,6 +442,9 @@
         },
         {
           "name": "rm",
+          "symbol": [
+            "SpaceTab"
+          ],
           "tip": [
             "U: rm <alias>\n",
             "Remove command aliases\n",
