feat(completions): update scoop

--- a/completions/scoop/language/zh-CN.json
+++ b/completions/scoop/language/zh-CN.json
@@ -508,6 +508,15 @@
       ],
       "next": [
         {
+          "name": "rm",
+          "symbol": [
+            "SpaceTab"
+          ],
+          "tip": [
+            "移除配置。"
+          ]
+        },
+        {
           "name": "proxy",
           "tip": [
             "{{",
