--- a/completions/scoop/language/en-US.json
+++ b/completions/scoop/language/en-US.json
@@ -510,6 +510,15 @@
       ],
       "next": [
         {
+          "name": "rm",
+          "symbol": [
+            "SpaceTab"
+          ],
+          "tip": [
+            "Remove configuration."
+          ]
+        },
+        {
           "name": "proxy",
           "tip": [
             "{{",
