feat(completions): update deno

--- a/completions/deno/language/zh-CN.json
+++ b/completions/deno/language/zh-CN.json
@@ -1974,13 +1974,13 @@
         {
           "name": "--json",
           "tip": [
-            "Output lint result in JSON format."
+            "以 JSON 格式输出 lint 结果。"
           ]
         },
         {
           "name": "--compact",
           "tip": [
-            "Output lint result in compact format."
+            "以紧凑格式输出 lint 结果。"
           ]
         },
         {
